fix: table fixed columns should not overlap other z-index element fix #20098

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -17,6 +17,7 @@
 .@{table-prefix-cls} {
   .reset-component;
   position: relative;
+  z-index: 0;
   clear: both;
 
   // https://github.com/ant-design/ant-design/issues/17611
